--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,12 +1,12 @@
 ---
-name: HexClan
-avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
+name: Hosenur
+avatar: /static/images/avatar.jpg
+occupation: Inidie Developer ✨
+tagline: Building Cool Stuffs 👾
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
+Hi there, I am Hosenur, an Inidie Devloper. Experimenting and Building with JavaScript, Go, Python, and Rust and Linux.
 
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
+From the past few years I have been working an various projects with different technologies and languages. Building bots, web applications, and everything in between.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
+In my free time, I like to build things with Arduino, and bake some Raspberry Pi. Playing with IOT and stuffs.
